--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart - TimeZone</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -141,7 +141,7 @@
                 <div class="product-grid">
                     <article class="product-card">
                         <figure>
-                            <img src="/images/watch_luxury_men.jpg" alt="Recommended Watch 1">
+                            <img src="images/watch_luxury_men.jpg" alt="Recommended Watch 1">
                         </figure>
                         <div class="product-info">
                             <h3>Executive Chronograph</h3>
@@ -152,7 +152,7 @@
 
                     <article class="product-card">
                         <figure>
-                            <img src="/images/watch_womens_elegant.jpg" alt="Recommended Watch 2">
+                            <img src="images/watch_womens_elegant.jpg" alt="Recommended Watch 2">
                         </figure>
                         <div class="product-info">
                             <h3>Elegant Mesh Watch</h3>
@@ -163,7 +163,7 @@
 
                     <article class="product-card">
                         <figure>
-                            <img src="/images/watch_womens_gold.jpg" alt="Recommended Watch 3">
+                            <img src="images/watch_womens_gold.jpg" alt="Recommended Watch 3">
                         </figure>
                         <div class="product-info">
                             <h3>Vintage Gold Collection</h3>
@@ -214,7 +214,7 @@
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
