--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - TimeZone</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         .gallery-section {
             padding: 4rem 0;
@@ -161,7 +161,7 @@
             <div class="container">
                 <div class="gallery-grid">
                     <div class="gallery-item" onclick="openLightbox(0)">
-                        <img src="/images/watch_luxury_men.jpg" alt="Luxury Men's Watch">
+                        <img src="images/watch_luxury_men.jpg" alt="Luxury Men's Watch">
                         <div class="gallery-overlay">
                             <h3>Executive Collection</h3>
                             <p>Premium stainless steel chronograph with sapphire crystal and water resistance.</p>
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="gallery-item" onclick="openLightbox(1)">
-                        <img src="/images/watch_mens_stylish.jpg" alt="Men's Stylish Watch">
+                        <img src="images/watch_mens_stylish.jpg" alt="Men's Stylish Watch">
                         <div class="gallery-overlay">
                             <h3>Classic Chronograph</h3>
                             <p>Sophisticated design perfect for business and casual wear.</p>
@@ -177,7 +177,7 @@
                     </div>
 
                     <div class="gallery-item" onclick="openLightbox(2)">
-                        <img src="/images/watch_womens_elegant.jpg" alt="Women's Elegant Watch">
+                        <img src="images/watch_womens_elegant.jpg" alt="Women's Elegant Watch">
                         <div class="gallery-overlay">
                             <h3>Elegant Mesh</h3>
                             <p>Timeless elegance with rose gold mesh strap and minimalist design.</p>
@@ -185,7 +185,7 @@
                     </div>
 
                     <div class="gallery-item" onclick="openLightbox(3)">
-                        <img src="/images/watch_womens_gold.jpg" alt="Women's Gold Watch">
+                        <img src="images/watch_womens_gold.jpg" alt="Women's Gold Watch">
                         <div class="gallery-overlay">
                             <h3>Vintage Gold</h3>
                             <p>Exquisite gold-toned vintage design with intricate link bracelet.</p>
@@ -193,7 +193,7 @@
                     </div>
 
                     <div class="gallery-item" onclick="openLightbox(4)">
-                        <img src="/images/watch_luxury_men.jpg" alt="Sport Watch">
+                        <img src="images/watch_luxury_men.jpg" alt="Sport Watch">
                         <div class="gallery-overlay">
                             <h3>Sport Pro Series</h3>
                             <p>Durable sports watch built for active lifestyles with advanced features.</p>
@@ -201,7 +201,7 @@
                     </div>
 
                     <div class="gallery-item" onclick="openLightbox(5)">
-                        <img src="/images/watch_womens_elegant.jpg" alt="Classic Women's Watch">
+                        <img src="images/watch_womens_elegant.jpg" alt="Classic Women's Watch">
                         <div class="gallery-overlay">
                             <h3>Classic Leather</h3>
                             <p>Timeless design with genuine leather strap and silver-toned case.</p>
@@ -264,12 +264,12 @@
     <script>
         // Gallery lightbox functionality
         const galleryImages = [
-            '/images/watch_luxury_men.jpg',
-            '/images/watch_mens_stylish.jpg',
-            '/images/watch_womens_elegant.jpg',
-            '/images/watch_womens_gold.jpg',
-            '/images/watch_luxury_men.jpg',
-            '/images/watch_womens_elegant.jpg'
+            'images/watch_luxury_men.jpg',
+            'images/watch_mens_stylish.jpg',
+            'images/watch_womens_elegant.jpg',
+            'images/watch_womens_gold.jpg',
+            'images/watch_luxury_men.jpg',
+            'images/watch_womens_elegant.jpg'
         ];
         
         let currentImageIndex = 0;
