--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="/images/watch_luxury_men.jpg" alt="Luxury Watch">
+                <img src="images/watch_luxury_men.jpg" alt="Luxury Watch">
             </div>
         </section>
 
@@ -52,7 +52,7 @@
                 <div class="product-grid">
                     <article class="product-card">
                         <figure>
-                            <img src="/images/watch_mens_stylish.jpg" alt="Men's Stylish Watch">
+                            <img src="images/watch_mens_stylish.jpg" alt="Men's Stylish Watch">
                         </figure>
                         <div class="product-info">
                             <h3>Classic Men's Chronograph</h3>
@@ -64,7 +64,7 @@
 
                     <article class="product-card">
                         <figure>
-                            <img src="/images/watch_womens_elegant.jpg" alt="Women's Elegant Watch">
+                            <img src="images/watch_womens_elegant.jpg" alt="Women's Elegant Watch">
                         </figure>
                         <div class="product-info">
                             <h3>Elegant Women's Mesh Watch</h3>
@@ -76,7 +76,7 @@
 
                     <article class="product-card">
                         <figure>
-                            <img src="/images/watch_womens_gold.jpg" alt="Women's Gold Watch">
+                            <img src="images/watch_womens_gold.jpg" alt="Women's Gold Watch">
                         </figure>
                         <div class="product-info">
                             <h3>Vintage Gold Collection</h3>
@@ -94,7 +94,7 @@
                 <h2>Experience Our Craftsmanship</h2>
                 <div class="video-container">
                     <video controls poster="/images/watch_luxury_men.jpg">
-                        <source src="/video/promotional_video.mp4" type="video/mp4">
+                        <source src="video/promotional_video.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
