--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - TimeZone</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -94,7 +94,7 @@
                     </div>
 
                     <div class="auth-image">
-                        <img src="/images/watch_luxury_men.jpg" alt="TimeZone Watches">
+                        <img src="images/watch_luxury_men.jpg" alt="TimeZone Watches">
                         <div class="auth-image-overlay">
                             <h2>Premium Timepieces</h2>
                             <p>Discover our collection of luxury watches crafted for the discerning individual.</p>
@@ -167,7 +167,7 @@
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
