--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products - TimeZone</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -55,7 +55,7 @@
                 <div class="products-grid">
                     <article class="product-card" data-category="men luxury">
                         <figure>
-                            <img src="/images/watch_luxury_men.jpg" alt="Luxury Men's Watch">
+                            <img src="images/watch_luxury_men.jpg" alt="Luxury Men's Watch">
                         </figure>
                         <div class="product-info">
                             <h3>Executive Chronograph</h3>
@@ -90,7 +90,7 @@
 
                     <article class="product-card" data-category="men">
                         <figure>
-                            <img src="/images/watch_mens_stylish.jpg" alt="Men's Stylish Watch">
+                            <img src="images/watch_mens_stylish.jpg" alt="Men's Stylish Watch">
                         </figure>
                         <div class="product-info">
                             <h3>Classic Men's Chronograph</h3>
@@ -125,7 +125,7 @@
 
                     <article class="product-card" data-category="women">
                         <figure>
-                            <img src="/images/watch_womens_elegant.jpg" alt="Women's Elegant Watch">
+                            <img src="images/watch_womens_elegant.jpg" alt="Women's Elegant Watch">
                         </figure>
                         <div class="product-info">
                             <h3>Elegant Women's Mesh Watch</h3>
@@ -160,7 +160,7 @@
 
                     <article class="product-card" data-category="women luxury">
                         <figure>
-                            <img src="/images/watch_womens_gold.jpg" alt="Women's Gold Watch">
+                            <img src="images/watch_womens_gold.jpg" alt="Women's Gold Watch">
                         </figure>
                         <div class="product-info">
                             <h3>Vintage Gold Collection</h3>
@@ -195,7 +195,7 @@
 
                     <article class="product-card" data-category="men">
                         <figure>
-                            <img src="/images/watch_luxury_men.jpg" alt="Sport Watch">
+                            <img src="images/watch_luxury_men.jpg" alt="Sport Watch">
                         </figure>
                         <div class="product-info">
                             <h3>Sport Pro Series</h3>
@@ -230,7 +230,7 @@
 
                     <article class="product-card" data-category="women">
                         <figure>
-                            <img src="/images/watch_womens_elegant.jpg" alt="Classic Women's Watch">
+                            <img src="images/watch_womens_elegant.jpg" alt="Classic Women's Watch">
                         </figure>
                         <div class="product-info">
                             <h3>Classic Leather Collection</h3>
@@ -305,7 +305,7 @@
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
