--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up - TimeZone</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -146,7 +146,7 @@
                     </div>
 
                     <div class="auth-image">
-                        <img src="/images/watch_womens_elegant.jpg" alt="TimeZone Watches">
+                        <img src="images/watch_womens_elegant.jpg" alt="TimeZone Watches">
                         <div class="auth-image-overlay">
                             <h2>Join Our Community</h2>
                             <p>Become part of the TimeZone family and enjoy exclusive benefits and premium service.</p>
@@ -219,7 +219,7 @@
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
 
