--- a/login.html
+++ b/login.html
@@ -162,7 +162,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 TimeZone. All rights reserved.</p>
+                <p>&copy; adnan 2025. All rights reserved.</p>
             </div>
         </div>
     </footer>
