--- a/signup.html
+++ b/signup.html
@@ -214,7 +214,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 TimeZone. All rights reserved.</p>
+                <p>&copy; adnan 2025. All rights reserved.</p>
             </div>
         </div>
     </footer>
